fixed mobile alignment issue for Home

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -8,9 +8,8 @@
 
 @media (max-width: 425px) and (orientation: portrait) {
     .sectionDivides {
-        /* width: 100%; */
+        width: 100%;
         margin: 0 auto;
-        text-align: center;
         
     }
 
@@ -30,7 +29,6 @@
     
     .aboutSummary {
         width: 80%;
-        /* padding: 25px; */
         display: flex;
         margin: auto;
         text-align: center;
@@ -39,7 +37,6 @@
     .homeFormat {
         line-height: 1.2;
         padding-top: 80px;
-        padding-right: 50px;
         width: 100%;
     }
     
